--- a/C4-L01.qmd
+++ b/C4-L01.qmd
@@ -30,7 +30,7 @@ author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
 title-block-banner: banner_deep.jpg
-bibliography: bibliography.bib
+#bibliography: bibliography.bib
 format: 
     html: 
         code-fold: true
@@ -88,7 +88,7 @@ also see [@prado2023time pp. 2-3]
 
 ### Stationarity (video)
 
-![~~slide 1~~](m1_0001.png){.column-margin width="250px" group="slides"}
+![~~slide 1~~](images/m1_0001.png){.column-margin width="250px" group="slides"}
 
 Stationarity see [@prado2023time §1.2] is a fundamental concept in time series analysis. 
 
@@ -143,7 +143,7 @@ Q. Can you explain with an example when a time series is weakly stationary but n
 ### The auto-correlation function ACF (video)
 
 
-![slide 1](m1_0011.png){.column-margin width="250px" group="slides"}
+![slide 1](images/m1_0011.png){.column-margin width="250px" group="slides"}
 
 The autocorrelation is simply how correlated a time series is with itself at different lags. Correlation in general is defined in terms of covariance of two variables. The covariance is a measure of the joint variability of two random variables. 
 
@@ -208,7 +208,7 @@ $$
 \text{Stationarity} \implies \rho(h)=\frac{\gamma(h)}{\gamma(o)} \qquad \gamma(0)=Var(y_t)
 $$
 
-![slide 2](m1_0012.png){.column-margin width="250px" group="slides"}
+![slide 2](images/m1_0012.png){.column-margin width="250px" group="slides"}
 
 $$
 y_{1:T}
@@ -446,9 +446,9 @@ We will next introduce the autoregressive process of order one, or AR(1) process
 ### The AR(1) process (video)
 
 
-![AR(1)](m1_0031.png){.column-margin width="250px" group="slides"}
+![AR(1)](images/m1_0031.png){.column-margin width="250px" group="slides"}
 
-![AR(1) properties](m1_0032.png){.column-margin width="250px" group="slides"}
+![AR(1) properties](images/m1_0032.png){.column-margin width="250px" group="slides"}
 
 
 ### The PACF of the AR(1) process (reading)
@@ -644,11 +644,11 @@ Given that $p(\beta, v \mid y) = p(\beta \mid v, y)p(v \mid y)$ the equations ab
 
 ## Maximum likelihood estimation in the AR(1) (video)
 
-![slide 1](m1_0041.png){.column-margin width="250px" group="slides"}
+![slide 1](images/m1_0041.png){.column-margin width="250px" group="slides"}
 
-![slide 2](m1_0042.png){.column-margin width="250px" group="slides"}
+![slide 2](images/m1_0042.png){.column-margin width="250px" group="slides"}
 
-![slide 3](m1_0043.png){.column-margin width="250px" group="slides"}
+![slide 3](images/m1_0043.png){.column-margin width="250px" group="slides"}
 
 
 ## R code: MLE for the AR(1), examples (reading)
@@ -732,7 +732,7 @@ cat("\n MLE of full likelihood for phi: ", result$maximum)
 
 ## Bayesian inference in the AR(1)
 
-![slide 1](m1_0051.png){.column-margin width="250px" group="slides"}
+![slide 1](images/m1_0051.png){.column-margin width="250px" group="slides"}
 
 ## Bayesian inference in the AR(1): Conditional likelihood example (video)
 
