--- a/C4-L02.qmd
+++ b/C4-L02.qmd
@@ -29,7 +29,7 @@ author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
 title-block-banner: banner_deep.jpg
-bibliography: bibliography.bib
+#bibliography: bibliography.bib
 format: 
     html: 
         code-fold: true
@@ -56,7 +56,7 @@ lightbox:
 
 ## Definition and state-space representation (video)
 
-![AR(p) process, characteristic polynomial, stability, stationarity and MA representation ](m2_0001.png){.column-margin width="250px" group="slides"}
+![AR(p) process, characteristic polynomial, stability, stationarity and MA representation ](images/m2_0001.png){.column-margin width="250px" group="slides"}
 
 
 [**AR(P)** is shorthand for *autoregressive process of order p* which generalizes the **AR(1)** process]{.mark} that we studied in the previous module. It is essentially a mapping that allows us to specify the current value of the time series in terms its past p-values and some noise. The number of parameter $p$, required is the **order** [**order**]{.column-margin} of the autoregressive process. It tells us how many *lags* we will be considering. 
@@ -152,7 +152,7 @@ Here, U is any complex valued number.
 >for Alpha 1, Alpha 2, and so on. The reciprocal roots.
 >[Why do we care about all these roots? Why do we care about this structure? Again, we will be able to understand some properties of the process based on these roots]{.mark} as we will see. 
 
-![A state space representation of Ar(p)](m2_0002.png){.column-margin width="250px" group="slides"}
+![A state space representation of Ar(p)](images/m2_0002.png){.column-margin width="250px" group="slides"}
 
 
 [We will now discuss another important representation of the AR(P) process, one that is based on a state-space representation of the process.]{.mark} Again, we care about this type of representations because they allow us to study some important properties of the process. In this case, our state-space or dynamic linear model representation, we will make some connections with these representations later when we talk about dynamic linear models, is given as follows for an AR(P). I have my y_t. I can write it as F transpose and then another vector x_t here. Then we're going to have x_t is going to be a function of x_t minus 1. That vector there is going to be an F and a G. I will describe what those are in a second. Then I'm going to have another vector here with some distribution. In our case, we are going to have a normal distribution also for that one. In the case of the AR(P), we're going to have x_t to be y_t, y_t minus 1.
@@ -173,17 +173,17 @@ Here, U is any complex valued number.
 
 ## Examples (video)
 
-![AR(1)](m2_0011.png){.column-margin width="250px" group="slides"}
+![AR(1)](images/m2_0011.png){.column-margin width="250px" group="slides"}
 
-![AR(2) two positive roots](m2_0012.png){.column-margin width="250px" group="slides"}
+![AR(2) two positive roots](images/m2_0012.png){.column-margin width="250px" group="slides"}
 
-![AR(2) complex roots](m2_0013.png){.column-margin width="250px" group="slides"}
+![AR(2) complex roots](images/m2_0013.png){.column-margin width="250px" group="slides"}
 
 {{< lipsum 3 >}}
 
 ## ACF of the AR(p) (video)
 
-![ACF of the AR(p)](m2_0021.png){.column-margin width="250px" group="slides"}
+![ACF of the AR(p)](images/m2_0021.png){.column-margin width="250px" group="slides"}
 
 {{< lipsum 2 >}}
 
