--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -31,7 +31,7 @@ author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
 title-block-banner: banner_deep.jpg
-bibliography: bibliography.bib
+#bibliography: bibliography.bib
 format: 
     html: 
         code-fold: true
