--- a/C4-L06.qmd
+++ b/C4-L06.qmd
@@ -15,7 +15,7 @@ author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
 title-block-banner: banner_deep.jpg
-bibliography: bibliography.bib
+#bibliography: bibliography.bib
 format: 
     html: 
         code-fold: true
@@ -83,12 +83,12 @@ Here is where I can collect questions about TS analysis that I have as I go thro
 1. How to use predictor variables to help forecast some variable such as sales? (i.e. regression on time series data)
 
 
-### Cointegration
+### Co-integration
 
 1. What are Cointegrated time series?
-   - **Cointegration** [**magic trick**]{.column-margin} is a technique used to find [a long term correlation between time series processes]{.mark} that was introduced in 1987 by  Nobel laureates Robert Engle and Clive Granger
+   - **Co-integration** [**magic trick**]{.column-margin} is a technique used to find [a long term correlation between time series processes]{.mark} that was introduced in 1987 by  Nobel laureates Robert Engle and Clive Granger
    - also see [@pfaff2008analysis]
-1. What are some test for cointegration:
+1. What are some test for co-integration:
    - Engle-Granger,
    - Johansen Test,
    - the Phillips-Ouliaris test. 
