--- a/C4-L00.qmd
+++ b/C4-L00.qmd
@@ -18,14 +18,14 @@ author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
 title-block-banner: banner_deep.jpg
-bibliography: bibliography.bib
+#bibliography: references.bib
 format: 
     html: 
         code-fold: true
         css: styles.css
 ---
 
-I decided to migrate some material that is auxilary to the course:
+I decided to migrate some material that is auxiliary to the course:
 
 1. An overview of the course.
 1. A review of some mathematical and statistical results used in the course.
@@ -383,7 +383,7 @@ We start with some books from the course, I collected here both the recommended 
 
 c.f. [@prado2023time]
 
-![Time Series: Modeling, Computation, and Inference](prado2023time.jpg){.column-margin width="150px"}
+![Time Series: Modeling, Computation, and Inference](images/prado2023time.jpg){.column-margin width="150px"}
 
 - Title:Time Series: Modeling, Computation, and Inference
 - ISBN:9781032040042, 1032040041
@@ -410,7 +410,7 @@ Once this course is done I will probably want to dive deeper into the subject an
 
 c.f. [@west2013bayesian]
 
-![Bayesian Forecasting and Dynamic Models](west2013bayesian.png){.column-margin width="150px"}
+![Bayesian Forecasting and Dynamic Models](images/west2013bayesian.png){.column-margin width="150px"}
 
 - Title:Bayesian Forecasting and Dynamic Models
 - ISBN:9781475770971, 1475770979
@@ -436,7 +436,7 @@ In this book we are concerned with Bayesian learning and forecast ing in dynamic
 
 c.f. [@nielsen2019practical]
 
-![Practical Times Series Analysis](nielsen2019practical.jpg){.column-margin width="150px"}
+![Practical Times Series Analysis](images/nielsen2019practical.jpg){.column-margin width="150px"}
 
 - Title:Practical Time Series Analysis: Prediction with Statistics and Machine Learning
 - ISBN:1492041602, 9781492041603
@@ -472,7 +472,7 @@ c.f. [@nielsen2019practical]
 c.f. [@theodoridis2015ML]
 
 
-![Machine Learning: A Bayesian and Optimization Perspective](theodoridis2015ML.png){.column-margin width="150px"}
+![Machine Learning: A Bayesian and Optimization Perspective](images/theodoridis2015ML.png){.column-margin width="150px"}
 
 - Title:Machine Learning: A Bayesian and Optimization Perspective
 - ISBN:0128015225, 9780128015223
@@ -500,7 +500,7 @@ The book builds carefully from the basic classical methods to the most recent tr
 
 c.f.[@von2002statistical]
 
-![Statistical Analysis in Climate Research](von2002statistical.jpg){.column-margin width="150px"}
+![Statistical Analysis in Climate Research](images/von2002statistical.jpg){.column-margin width="150px"}
 
 - Title:Statistical Analysis in Climate Research
 - ISBN:1139425099, 9781139425094
@@ -524,7 +524,7 @@ I came across this book while looking into the Durban-Levinson recursion and the
 
 c.f. [@BMCP2021]
 
-![Bayesian Modeling and Computation in Python](BMCP2021.jpg){.column-margin width="150px"}
+![Bayesian Modeling and Computation in Python](images/BMCP2021.jpg){.column-margin width="150px"}
 
 This is a great resource for translating what we  learned to Python.
  The book is available at [Bayesian Modeling and Computation in Python](https://bayesiancomputationbook.com/)
@@ -558,7 +558,7 @@ Although this is not a time series book, the authors have been intersted in the 
 
 ### Introductory Time Series with R c.f. [@cowpertwait2009introductory]
 
-![Introductory Time Series with R](cowpertwait2009introductory.jpg){.column-margin width="150px"}
+![Introductory Time Series with R](images/cowpertwait2009introductory.jpg){.column-margin width="150px"}
 
 [@cowpertwait2009introductory]
 "Introductory Time Series with R" by Cowpertwait and Metcalfe, and the second is 
@@ -577,7 +577,7 @@ Although this is not a time series book, the authors have been intersted in the 
 
 ### Analysis of Integrated and Cointegrated Time Series with R c.f. 
 
-![Analysis of Integrated and Cointegrated Time Series with R](pfaff2008analysis.jpg){.column-margin width="150px" style="vertical-align: top;" }
+![Analysis of Integrated and Cointegrated Time Series with R](images/pfaff2008analysis.jpg){.column-margin width="150px" style="vertical-align: top;" }
 
 [@pfaff2008analysis] "Analysis of Integrated and Cointegrated Time Series with R" by Bernhard Pfaff. Its been a long time since I read this book and rather than do it an injustice I direct you to  the review by Dirk Eddelbuettel in the Journal of Statistical Software is avaoilable at [review](https://dirk.eddelbuettel.com/papers/pfaff_urca.pdf). Or the book's website at [Analysis of Integrated and Cointegrated Time Series with R](https://www.springer.com/gp/book/9780387759661).
 
@@ -604,7 +604,7 @@ Although this is not a time series book, the authors have been intersted in the 
 
 ### Bayesian Inference for Stochastic Processes by Lyle D. Broemeling
 
-![Bayesian Inference for Stochastic Processes by Lyle D. Broemeling](broemeling2018bayesian.jpg){.column-margin width="150px" style="vertical-align: top;" }
+![Bayesian Inference for Stochastic Processes by Lyle D. Broemeling](images/broemeling2018bayesian.jpg){.column-margin width="150px" style="vertical-align: top;" }
 
 - The code for R and WinBUGS is available at [code](http://www.lbroemeling.com/)
 - IT is based on WinBUGS which is a bit dated but still useful.
@@ -622,7 +622,7 @@ This is a very interesting book which covers a new approach to fitting time seri
 
 ### Statistics for Spatio-Temporal Data
 
- ![Statistics for Spatio-Temporal Data](cressie2011statistics.jpg){.column-margin width="150px" style="vertical-align: top;" }
+ ![Statistics for Spatio-Temporal Data](images/cressie2011statistics.jpg){.column-margin width="150px" style="vertical-align: top;" }
 
 
 [@cressie2011statistics] is a book I came across when I tried to understand the NDLM model. NLDMs have a two level hierarcial form and it seems possible to extend this formulation will non-normaly distributed shocks and possibly non linear relation. In this book the authors take an interesting approch of not only looking at NDLM as a heirarchical model but they also extend the time series model into a spatio-temporal model. 
@@ -633,7 +633,7 @@ This book is a comprehensive introduction to the analysis of spatio-temporal dat
 
 c.f. [@rios2012bayesian]
 
-![Bayesian Analysis of Stochastic Process Models](rios2012bayesian.jpg){.column-margin width="150px" style="vertical-align: top;" }
+![Bayesian Analysis of Stochastic Process Models](images/rios2012bayesian.jpg){.column-margin width="150px" style="vertical-align: top;" }
 
 David Rios Insua, Fabrizio Ruggeri, Michael P. Wiper
 
