--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Week 1: Introductions to time series analysis and the AR(1) process"
+title: "Week 5: Final Project"
 subtitle: Time Series Analysis
 description: "The AR(1) process, Stationarity, ACF, PACF, Differencing, and Smoothing"
 date: 2024-10-27
@@ -31,8 +31,41 @@ author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
 title-block-banner: banner_deep.jpg
-#bibliography: bibliography.bib
 format: 
     html: 
         code-fold: true
 ---
+
+In this final project you will use normal dynamic linear models to analyze a time series dataset downloaded from Google trend.
+
+::: {.callout-note}
+## Objectives
+
+- Use R for analysis and forecasting of time series using NDLM (case of known observational and system variances)
+- Use R for analysis and forecasting of time series using the NDLM (cases of known or unknown observational variance and unknown system 
+variance specified using a discount factor)
+
+:::
+
+
+
+::: {.callout-note}
+## Instructions
+
+So far in this course, we have discussed the following aspects of Bayesian time series models:
+
+- Concepts of stationarity, the autocorrelation function, definition and properties of autoregressive (AR) models; 
+- Maximum likelihood and Bayesian conjugate analysis of AR models;
+- Determination of the order of AR models using AIC or BIC as criteria;
+- Definition of Normal Dynamic Linear Models (NDLMs); 
+- NDLM building using polynomial trend, seasonal and regression components via the superposition principle; 
+- Bayesian filtering, smoothing and forecasting in the NDLM with known observational variances and known system covariance matrices; 
+- Bayesian filtering, smoothing and forecasting in the NDLM with unknown but constant observational variance and known system covariance matrix;
+- Bayesian filtering, smoothing and forecasting in the NDLM with known observational variances and unknown system covariance matrices using discount factors; 
+- Bayesian filtering, smoothing and forecasting in the NDLM with unknown but constant observational variance and unknown system covariance matrices using discount factors. 
+
+In this project, you will download a dataset from Google trends. In order to do this you can type a term/terms of interest in Google trends, just like we did with the example with the term "time series"  analyzed in the course. You could use any term such as "flu", "cranberry" or any other term(s). Here is a tutorial on how to download data from Google trends:
+
+
+
+:::
