--- a/A01.qmd
+++ b/A01.qmd
@@ -1,54 +1,89 @@
+---
+title: "Appendix: Notation"
+---
+
 # Notation
 
 parameters are with Greek letters
 
-$$\theta$$
+$$
+\theta
+$$
 
 estimate $$\hat{p}$$
 
 the Certain event
 
-$$\Omega$$
+$$
+\Omega
+$$
 
 probability of RV x taking value x
 
-$$P(X=x)$$
+$$
+P(X=x)
+$$
 
-odds $$\mathcal{O}(X)$$
+odds 
 
-random variables $$X$$
+$$
+\mathcal{O}(X)
+$$
+
+random variables 
+$$
+X
+$$
 
 X is distributed as
 
-$$X\sim N(\mu, \sigma^2)$$
+$$X
+\sim N(\mu, \sigma^2)
+$$
 
 X is proportional to
 
-$$X\propto N(\mu, \sigma^2)$$
+$$
+X\propto N(\mu, \sigma^2)
+$$
 
 Probability of A and B
 
-$$P(X \cap Y)$$
+$$
+P(X \cap Y)
+$$
 
 Conditional probability
 
-$$P(X \mid Y)$$
+$$
+P(X \mid Y)
+$$
 
 Joint probability
 
-$$P(X,Y)$$
+$$
+P(X,Y)
+$$
 
-$$Y_i \stackrel{iid}\sim N(\mu, \sigma^2)$$
+$$
+Y_i \stackrel{iid}\sim N(\mu, \sigma^2)
+$$
 
 Approximately distributed as (say using the CLT)
 
-$$Y_i \stackrel{.}\sim N(\mu, \sigma^2)$$
+$$
+Y_i \stackrel{.}\sim N(\mu, \sigma^2)
+$$
 
-$$\mathbb{E}[X_i]$$
+$$
+\mathbb{E}[X_i]
+$$
 
 The **expected value** of an RV X set to 0 (A.K.A. a fair bet)
 
-$$\mathbb{E}[X_i]  \stackrel{set} = 0$$
+$$
+\mathbb{E}[X_i]  \stackrel{set} = 0
+$$
 
 The variance of an RV
 
@@ -56,24 +91,54 @@ $$\mathbb{V}ar[X_i]$$
 
 logical implication
 
-$$\implies$$
+$$
+\implies
+$$
 
 if and only if
 
-$$\iff$$
+$$
+\iff
+$$
 
 therefore
 
-$$\therefore$$
+$$
+\therefore
+$$
 
 independence
 
-$$A \perp \!\!\! \perp B \iff P(A \mid B) = P(A)$$
+$$
+A \perp \!\!\! \perp B \iff P(A \mid B) = P(A)
+$$
 
-todo
+Indicator function
+$$
+\mathbb{I}_{\{A\}} = \begin{cases}
+1 & \text{if } A \text{ is true} \\ 0 & \text{otherwise} \end{cases}
+$$
 
--   F the event space
--   Likelihood
--   LogLikelihood
--   MLE Maximum likelihood estimator
--   MAP Maximum a posteriori estimate
+Dirichlet function
+
+This is a continuous version of the indicator function, defined as a limit.
+
+$$
+\delta(x) = \lim_{\epsilon \to 0} \frac{1}{2\epsilon} \mathbb{I}_{\{|x| < \epsilon\}}
+$$
+
+The Dirichlet function is used to represent a point mass at a point, often used as a component for zero inflated mixtures.
+
+
+
+
+::: {.callout-note collapse="TRUE" }
+## Todo
+
+- [ ]  F the event space
+- [ ]  Likelihood
+- [ ]  LogLikelihood
+- [ ]  MLE Maximum likelihood estimator
+- [ ]  MAP Maximum a posteriori estimate
+
+:::
