front matter updates

--- a/A03.qmd
+++ b/A03.qmd
@@ -1,6 +1,10 @@
+---
+title: "Appendix: Discrete Distributions"
+---
+
 # Continuous Distributions
 
-Followin a subjective view of distribution, which is more amenable to reinterpretation I use an indicator function to place restrictions on the range of parameter of the PDF.
+Following a subjective view of distribution, which is more amenable to reinterpretation I use an indicator function to place restrictions on the range of parameter of the PDF.
 
 ```{r include=FALSE}
 # Necessary for using dvisvgm on macOS
