front matter updates

--- a/C4-L02.qmd
+++ b/C4-L02.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Week 2: The AR(p) process"
-subtitle: Time Series Analysis
-description: "The AR(1) process, Stationarity, ACF, PACF, Differencing, and Smoothing"
 date: 2024-10-24
+title: "The AR(p) process"
+subtitle: Time Series Analysis
+description: "The AR(P) process, its state-space representation, the characteristic polynomial, and the forecast function"
 categories: 
   - Coursera 
   - notes
