--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -1,8 +1,8 @@
 ---
 date: 2024-10-25
-title: "Week 3: Normal Dynamic Linear Models, Part 1"
+title: "Normal Dynamic Linear Models, Part 1"
 subtitle: Time Series Analysis
-description: "Normal Dynamic Linear Models, Part 1"
+description: "Normal Dynamic Linear Models (NDLMs) are a class of models used for time series analysis that allow for flexible modeling of temporal dependencies."
 categories: 
   - Coursera 
   - notes
