--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Week 4: Normal Dynamic Linear Models, Part 2"
-subtitle: Time Series Analysis
-description: "The AR(1) process, Stationarity, ACF, PACF, Differencing, and Smoothing"
 date: 2024-10-26
+title: "Normal Dynamic Linear Models, Part 2"
+subtitle: Time Series Analysis
+description: "Normal Dynamic Linear Models (NDLMs) are a class of models used for time series analysis that allow for flexible modeling of temporal dependencies."
 categories: 
   - Coursera 
   - notes
