--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Week 5: Final Project"
-subtitle: Time Series Analysis
-description: "The AR(1) process, Stationarity, ACF, PACF, Differencing, and Smoothing"
 date: 2024-10-27
+title: "Final Project"
+subtitle: Time Series Analysis
+description: "Analyzing a time series dataset using Normal Dynamic Linear Models (NDLMs)"
 categories: 
   - Coursera 
   - notes
