--- a/A01.qmd
+++ b/A01.qmd
@@ -130,7 +130,17 @@ $$
 The Dirichlet function is used to represent a point mass at a point, often used as a component for zero inflated mixtures.
 
 
+The following are from course 4
 
+
+-   $\{y_t\}$ - the time series process, where each $y_t$ is a univariate random variable and t are the time points that are equally spaced. 
+-   $y_{1:T}$ or $y_1, y_2, \ldots, y_T$ - the observed data.
+- You will see the use of ' to denote the transpose of a matrix,
+- and the use of $\sim$ to denote a distribution.
+- under tildes $\utilde{y}$ are used to denote estimates of the true values $y$.
+- E matrix of eigenvalues
+- $\Lambda = diagonal(\alpha_1, \alpha_2, \ldots , \alpha_p)$ is a diagonal matrix with the eigenvalues of Σ on the diagonal.
+- $J_p(1)$ = a p by p Jordan form matrix with 1 on the superdiagonal
 
 ::: {.callout-note collapse="TRUE" }
 ## Todo
